--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body{
 .cor-card{
     background-color:#1f2024 ;
     color: white;
-    height: 20rem;
+    height: auto;
     position: absolute;
     z-index: 1;
     top: 35%;
+    padding: 30px 0;
     
 }
 .card-1{
@@ -79,4 +80,9 @@ color: #d63d00;
 
 .espaco{
     margin-top: 50px;
+}
+
+@media screen and (min-width:768px) and (max-width:1023px){
+
+    
 }
