--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     position: absolute;
     z-index: 1;
     top: 35%;
-    padding: 30px 0;
+    padding: 2px 0;
     
 }
 .card-1{
@@ -39,7 +39,7 @@ body{
 
 .card-1 a{
    background-color:#d63d00 ;
-width: 30rem;
+width: 25vw;
 }
 .card-1 i{
     
