--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
     overflow: hidden;
     position: relative;
     z-index: 0;
+    padding: 0;
 }
 body{
     background-color: #090a0a;
+    width: 100vw;
+    overflow: hidden;
 }
 
 .cor-card{
@@ -16,6 +19,7 @@ body{
     z-index: 1;
     top: 35%;
     padding: 2px 0;
+    width: 35vw;
     
 }
 .card-1{
@@ -82,7 +86,8 @@ color: #d63d00;
     margin-top: 50px;
 }
 
-@media screen and (min-width:768px) and (max-width:1023px){
-
-    
+@media screen and (max-width:767px){
+    #celular{
+        width: 100vw;
+    }
 }
